--- a/index.html
+++ b/index.html
@@ -997,25 +997,25 @@
                     <div class="accordion" id="accordionExample">
                       <div class="row">
                         <div class="col-md-4">
-                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_인포그래픽.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난지원금_안내자료/info_0.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스1.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난지원금_안내자료/info_1.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스2.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난지원금_안내자료/info_2.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스3.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난지원금_안내자료/info_3.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스4.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난지원금_안내자료/info_4.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스5.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난지원금_안내자료/info_5.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-md-4">
-                          <img src="img/긴급재난지원금_안내자료/긴급재난금_신청,지급방안_카드뉴스6.png" class="img-fluid" alt="">
+                          <img src="img/긴급재난지원금_안내자료/info_6.png" class="img-fluid" alt="">
                         </div>
                          <div class="col-md-4">
                           <img src="img/긴급재난지원금_안내자료/긴급재난지원금_사용방법_및_기한.png" class="img-fluid" alt="">
@@ -1074,7 +1074,7 @@
                         </div> -->
                         <!-- //확진자 News 13 -->
 
-                        <!-- 확진자 News 14 --> 
+                        <!-- 확진자 News 14 -->
                         <div class="card">
                           <div class="card-header" id="headingFour">
                             <h2 class="mb-0 cases-title">
