--- a/index.html
+++ b/index.html
@@ -1078,7 +1078,7 @@
                         <div class="card">
                           <div class="card-header" id="headingFour">
                             <h2 class="mb-0 cases-title">
-                              <a target="_blank" href="https://www.jeju.go.kr/news/bodo/list.htm?act=view&seq=1242166">
+                              <a target="_blank" href="https://www.jeju.go.kr/files/convert/202005/131cb7fb-bc07-455c-84d2-f94341c858a4.hwp.htm">
                                 <button class="btn btn-link" type="button">
                                   열네번째 확진자
                                 </button>
