식품의약처 공적마스크 정보 업데이트

--- a/index.html
+++ b/index.html
@@ -906,6 +906,7 @@
                         </table>
                       </div>
                       <p>*석가탄신일(4/30), 어린이날(5/5)등 법정공휴일은 주말과 동일</p>
+                      <a href="https://www.mfds.go.kr/docviewer/skin/doc.html?fn=20200518084427190.pdf&rs=/docviewer/result/ntc0003/43738/1/202005" target="_blank">*식품의약품안전처 공적마스크 구매절차 질문&답변(5/18변경)</a></p>
                       <h5 style="font-weight: 600;">마스크 직접 구매</h5>
                       <ul>
                         <li>운전면허증, 주민등록증, 여권 등의 신분증을 지참</li>
@@ -914,8 +915,8 @@
                       <h5 style="font-weight: 600;">마스크 대리 구매</h5>
                       <ul>
                         <li>5부제 해당 요일에 대리 구매 가능</li>
-                        <li><a href="https://www.mfds.go.kr/docviewer/skin/doc.html?fn=20200420091345000.pdf&rs=/docviewer/result/ntc0003/43738/1/202004" target="_blank">식품의약품안전처 공적마스크 구매절차 질문&답변(4/20변경)</a></li>
-                        <li><b>대상</b> : 2002년 이후 출생한 어린이, 1940년 이전 출생한 80살 이상 노인, 장기요양급여 수급자, 입원환자(요양병원 환자 제외), 요양병원 입원환자, 국가보훈대상자 중 상이자, 장애인, 임신부, 등</li>
+                        <li><a href="http://blog.naver.com/kfdazzang/221839489769" target="_blank">공적마스크 대리구매 안내</a></li>
+                        <!-- <li><b>대상</b> : 2002년 이후 출생한 어린이, 1940년 이전 출생한 80살 이상 노인, 장기요양급여 수급자, 입원환자(요양병원 환자 제외), 요양병원 입원환자, 국가보훈대상자 중 상이자, 장애인, 임신부, 등</li> -->
                         <li><b>구입처</b> : 약국(3월 9일부터) / 우체국, 농협, 하나로마트(3월 16일부터)</li>
                       </ul>
                     </div>
