refactor: create var for daily diff

--- a/index.html
+++ b/index.html
@@ -1732,6 +1732,7 @@
     var 사망자수 = 0;
     var 완치자수 = 0;
     var 한국확진자수 = 0;
+    var 한국전일대비 = 0;
 
     for (var variable in data) {
       if (data[variable]["Name"] == "한국") {
@@ -1749,14 +1750,13 @@
     확진자수 = crawlWorldCumulativeData[crawlWorldCumulativeData.length - 1][1];
     사망자수 = crawlWorldCumulativeData[crawlWorldCumulativeData.length - 1][2];
     완치자수 = crawlWorldCumulativeData[crawlWorldCumulativeData.length - 1][3];
+    한국전일대비 = koreaRegionalCumulativeData[koreaRegionalCumulativeData.length-1][2]
 
 
     // 전 세계 완치자 ui 반영
     document.getElementById("확진자수").innerHTML = Number(확진자수).toLocaleString();
     document.getElementById("한국확진자").innerHTML = Number(한국확진자수).toLocaleString();
-
-
-    document.getElementById("한국확진자전일비").innerHTML = '(전일대비) +' + Number(koreaRegionalCumulativeData[koreaRegionalCumulativeData.length-1][2]).toLocaleString() + '명';
+    document.getElementById("한국확진자전일비").innerHTML = ' (전일대비) +' + Number(한국전일대비).toLocaleString() + '명';
 
     // 지역별확진자 업데이트 시간
     document.getElementById("지역별확진자_업데이트_시간_태그").innerHTML = 지역별확진자_업데이트_시간;
