feature: improve source labeling

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                   <div class="card-body tab-content" style="height:35rem;">
                     <canvas id="koreaDeathsPerPieChart"></canvas>
                   </div>
-                  <h6 style="margin-left: 2rem;">*질병관리본부 데이터로 일일 업데이트 됩니다. </h6>
+                  <div class="source mt-2"><span class="title">출처</span><span class="desc">질병관리본부</span></div>
                 </div>
               </div>
               <!-- //한국 연령대별 확진자 분석 -->
@@ -329,7 +329,7 @@
                   <div class="card-body tab-content" style="height:35rem;">
                     <canvas id="koreaDeathsPerPieChart_two"></canvas>
                   </div>
-                  <h6 style="margin-left: 2rem;"> *질병관리본부 데이터로 일일 업데이트 됩니다. </h6>
+                  <div class="source mt-2"><span class="title">출처</span><span class="desc">질병관리본부</span></div>
                 </div>
               </div>
               <!-- //한국 치명율 분석 -->
