--- a/index.html
+++ b/index.html
@@ -310,10 +310,10 @@
                     <div class="right"><a class="new_window" href="#" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                   </div>
                   <!-- Card Body -->
-                  <div class="card-body tab-content" style="height:35rem;">
-                    <canvas id="koreaDeathsPerPieChart"></canvas>
+                  <div class="card-body">
+                    <div class="tab-content" style="height:35rem;"><canvas id="koreaDeathsPerPieChart"></canvas></div>
+                    <div class="source mt-2"><span class="title">출처</span><span class="desc">질병관리본부</span></div>
                   </div>
-                  <div class="source mt-2"><span class="title">출처</span><span class="desc">질병관리본부</span></div>
                 </div>
               </div>
               <!-- //한국 연령대별 확진자 분석 -->
@@ -328,8 +328,8 @@
                   <!-- Card Body -->
                   <div class="card-body tab-content" style="height:35rem;">
                     <canvas id="koreaDeathsPerPieChart_two"></canvas>
-                    <div class="source mt-2"><span class="title">출처</span><span class="desc">질병관리본부</span></div>
                   </div>
+                  <div class="source mt-2"><span class="title">출처</span><span class="desc">질병관리본부</span></div>
                 </div>
               </div>
               <!-- //한국 치명율 분석 -->
