fix: fix label position for age deaths

--- a/index.html
+++ b/index.html
@@ -326,10 +326,11 @@
                     <div class="right"><a class="new_window" href="#" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                   </div>
                   <!-- Card Body -->
-                  <div class="card-body tab-content" style="height:35rem;">
-                    <canvas id="koreaDeathsPerPieChart_two"></canvas>
+                  <div class="card-body">
+                    <div class="tab-content" style="height:35rem;"><canvas id="koreaDeathsPerPieChart_two"></canvas></div>
+                    <div class="source mt-2"><span class="title">출처</span><span class="desc">질병관리본부</span></div>
                   </div>
-                  <div class="source mt-2"><span class="title">출처</span><span class="desc">질병관리본부</span></div>
+                  
                 </div>
               </div>
               <!-- //한국 치명율 분석 -->
@@ -618,7 +619,7 @@
                                 <td>약 0.07%</td>
                                 <td>약 35%</td>
                                 <td>약 10%</td>
-                                <td>세계 <span id="세계_치명률"></span>%,<br>대한민국<span id="한국_치명률"></span>%</td>
+                                <td>세계 <span id="세계_치명률"></span>%,<br>대한민국 <span id="한국_치명률"></span>%</td>
                               </tr>
                               <tr>
                                 <th>기초감염재생산수<br>(R0값)*</th>
