feature: move source to label

--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                           *기초감염재생산수(R0값): 한 사람의 감염자가 몇 명을 전염시킬 수 있는지를 나타낸 값<br>
                           *비말감염: 감염자의 침, 콧물 등 체액이 다른 사람의 입이나 코로 들어가 감염이 이루지는 것<br>
                         </p>
-                        <div class="source"><span class="title">출처</span><span class="desc">질병관리본부, 세계보건기구(WHO). 우측 하단 링크 참고.</span></div>
+                        <div class="source"><span class="title">출처</span><span class="desc">질병관리본부, 세계보건기구(WHO)</span></div>
                       </div>
                     </div>
                   </div>
@@ -665,9 +665,6 @@
                       </div>
                       <!-- Card Body -->
                       <div class="card-body">
-                        <ul>
-                          <li><a href=" https://www.washingtonpost.com/graphics/2020/world/corona-simulator/?itid=sf_coronavirus ">시나리오 관련 워싱턴포스트 뉴스기사</a></li>
-                        </ul>
                         <div class="covid-simulator" style="width:100%">
                           <ul class="covid-status">
                             <li class="recovered">
@@ -730,6 +727,12 @@
                         </div>
                       </div>
                     </div>
+                    <div class="source">
+                      <span class="title">출처</span>
+                      <span class="desc">
+                        <a href=" https://www.washingtonpost.com/graphics/2020/world/corona-simulator/?itid=sf_coronavirus ">워싱턴포스트</a>
+                      </span>
+                    </div>
                   </div>
                   <!-- //시나리오별 상황예측 -->
                   <!-- 한국과 세계 확진자 추이 그래프 -->
@@ -737,7 +740,7 @@
                     <div class="card shadow mb-4">
                       <!-- Card Header - Dropdown -->
                       <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                        <h6 class="m-0 font-weight-bold text-danger">한국과 세계 확진자 확진자 증가율 그래프</h6>
+                        <h6 class="m-0 font-weight-bold text-danger">한국, 세계 확진자 확진자 증가율 그래프</h6>
                         <!-- <div class="right"><a class="new_window" href="#" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                           <div class="dropdown no-arrow">
                             <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
