feature: fix label positioning

--- a/index.html
+++ b/index.html
@@ -725,13 +725,13 @@
                             <canvas class="canvas" width="800" height="400"></canvas>
                           </div>
                         </div>
+                        <div class="source mt-2">
+                          <span class="title">출처</span>
+                          <span class="desc">
+                            <a href=" https://www.washingtonpost.com/graphics/2020/world/corona-simulator/?itid=sf_coronavirus ">워싱턴포스트</a>
+                          </span>
+                        </div>
                       </div>
-                    </div>
-                    <div class="source">
-                      <span class="title">출처</span>
-                      <span class="desc">
-                        <a href=" https://www.washingtonpost.com/graphics/2020/world/corona-simulator/?itid=sf_coronavirus ">워싱턴포스트</a>
-                      </span>
                     </div>
                   </div>
                   <!-- //시나리오별 상황예측 -->
