feature: simplify links

--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
                         <div class="source mt-2">
                           <span class="title">출처</span>
                           <span class="desc">
-                            <a href=" https://www.washingtonpost.com/graphics/2020/world/corona-simulator/?itid=sf_coronavirus ">워싱턴포스트</a>
+                            <a href="https://www.washingtonpost.com/graphics/2020/world/corona-simulator/?itid=sf_coronavirus">워싱턴포스트</a>
                           </span>
                         </div>
                       </div>
@@ -959,16 +959,13 @@
                             </div>
                           </div>
                           <br>
-                          <p>
-                            <행정안전부 긴급재난 지원금 안내 링크>
-                          </p>
-                          <ul>
-                            <li><a href="https://www.gov.kr/portal/coronaPolicy/list/emergCalamSportAmt/sub02" target="_blank">신청방법</a></li>
-                            <li><a href="https://www.gov.kr/portal/coronaPolicy/list/emergCalamSportAmt/sub03" target="_blank">지급 수단 안내</a></li>
-                            <li><a href="https://www.gov.kr/portal/coronaPolicy/list/emergCalamSportAmt/sub04" target="_blank">발표자료</a></li>
-                            <li><a href="https://www.gov.kr/portal/coronaPolicy/list/emergCalamSportAmt/sub05" target="_blank">보도/홍보 자료</a></li>
-                            <li><a href="https://www.gov.kr/portal/coronaPolicy/list/emergCalamSportAmt/sub06" target="_blank">FAQ</a></li>
-                          </ul>
+                          <p>보다 자세한 신청방법, 지급수단 안내, 발표자료, FAQ 등을 위해서는 아래 링크 참고.</p>
+                          <div class="source mt-2">
+                          <span class="title">출처</span>
+                          <span class="desc">
+                            <a href="https://www.gov.kr/portal/coronaPolicy/list/emergCalamSportAmt/sub01">행정안전부</a>
+                          </span>
+                        </div>
                         </div>
                       </div>
                     </div>
@@ -1069,7 +1066,7 @@
                 <div id="지역선별진료소" class="card shadow mb-4">
                   <!-- Card Header - Dropdown -->
                   <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                    <h6 class="m-0 font-weight-bold text-danger">지역선별진료소 및 보건소(지도 클릭 후 전화연결 가능)</h6>
+                    <h6 class="m-0 font-weight-bold text-danger">지역선별진료소 및 보건소 (지도 클릭 후 전화연결 가능)</h6>
                   </div>
                   <!-- Card Body -->
                   <div class="card-body">
@@ -1556,10 +1553,10 @@
                         </li>
                         <br>
                         <li>데이터만 가져가시고 싶으신 경우 아래 파일을 참고해주세요. 20분마다 업데이트되는 파일입니다.</li>
-                        <li>한국 데이터 : <a href="https://github.com/LiveCoronaDetector/livecod/tree/master/data" target="_blank">저장소로 바로가기</a>, <a href="https://livecorona.co.kr/data/koreaRegionalData.js" target="_blank">사용가능한 URL 바로가기</a></li>
-                        <li>해외 데이터 : <a href="https://github.com/LiveCoronaDetector/livecod/tree/master/data" target="_blank">저장소로 바로가기</a>, <a href="https://livecorona.co.kr/data/worldData.js" target="_blank">사용가능한 URL 바로가기</a></li>
-                        <li>한국 누적 데이터 : <a href="https://github.com/LiveCoronaDetector/livecod/tree/master/data" target="_blank">저장소로 바로가기</a>, <a href="https://livecorona.co.kr/data/koreaRegionalCumulativeData.js" target="_blank">사용가능한 URL 바로가기</a></li>
-                        <li>세계 누적 데이터 : <a href="https://github.com/LiveCoronaDetector/livecod/tree/master/data" target="_blank">저장소로 바로가기</a>, <a href="https://livecorona.co.kr/data/worldCumulativeData.js" target="_blank">사용가능한 URL 바로가기</a></li>
+                        <li><a href="https://livecorona.co.kr/data/koreaRegionalData.js" target="_blank">한국 데이터</a></li>
+                        <li><a href="https://livecorona.co.kr/data/worldData.js" target="_blank">해외 데이터</a></li>
+                        <li><a href="https://livecorona.co.kr/data/koreaRegionalCumulativeData.js" target="_blank">한국 누적 데이터</a></li>
+                        <li><a href="https://livecorona.co.kr/data/worldCumulativeData.js" target="_blank">세계 누적 데이터</a></li>
                       </ul>
                       <p class="text-right">
                         <a target="_blank" rel="noopener noreferrer" href="https://www.notion.so/5a68695448fc4724b8e1e070e919508d">담당자 및 도움을 주신 분들</a> |
