jeju14th confirmed deactivation

--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@
                             </div> -->
                           <!-- //확진자 News 13 -->
                           <!-- 확진자 News 14 -->
-                          <div class="card">
+                          <!-- <div class="card">
                             <div class="card-header" id="headingFour">
                               <h2 class="mb-0 cases-title">
                                 <a target="_blank" href="https://www.jeju.go.kr/files/convert/202005/131cb7fb-bc07-455c-84d2-f94341c858a4.hwp.htm">
@@ -1013,7 +1013,7 @@
                                 </a>
                               </h2>
                             </div>
-                          </div>
+                          </div> -->
                           <!-- //확진자 News 14 -->
                         </div>
                       </div>
