--- a/index.html
+++ b/index.html
@@ -805,11 +805,11 @@
                         <div class="right">공적마스크 정보&nbsp;<a class="new_window" href="https://www.mfds.go.kr/bogunMaskPanMae.jsp" target="_blank" alt="상세보기"><i class="fas fa-external-link-alt"></i></a></div>
                       </div>
                       <div class="card-body">
-                        <div class="row">
-                          <div class="col-md-4">
+                          <a href="img/마스크_5부제폐지.png" class="block" target="_blank"><img src="img/마스크_5부제폐지.png" alt="6월_마스크_5부제폐지" /></a>
                             <img src="img/마스크_5부제폐지.png" class="img-fluid" alt="">
                           </div>
                         </div>
+                        <br>
                         <div class="table-responsive">
                           <div class="text-right mb-1">ex)198<span class="text-danger">1</span>년생 : 월요일</div>
                           <table class="table table-striped text-center">
