열다섯번째 확진자 동선

--- a/index.html
+++ b/index.html
@@ -993,19 +993,6 @@
                       <div class="card-body">
                         <div class="accordion" id="accordionExample">
                           <a class="btn btn-primary" target="_blank" style="margin-bottom:1rem; width:100%;" href="https://gis.jeju.go.kr/crn/index.do" role="button">제주도청 제공 확진자 이동동선 및 안심존</a>
-                          <!-- 확진자 News 13 -->
-                          <!-- <div class="card">
-                            <div class="card-header" id="headingFour">
-                              <h2 class="mb-0 cases-title">
-                                <a target="_blank" href="https://www.jeju.go.kr/files/convert/202004/eb9df713-9733-4c2a-9a9a-4fd5dac8e14f.hwp.htm">
-                                  <button class="btn btn-link" type="button">
-                                    열세번째 확진자
-                                  </button>
-                                </a>
-                              </h2>
-                            </div>
-                            </div> -->
-                          <!-- //확진자 News 13 -->
                           <!-- 확진자 News 14 -->
                           <!-- <div class="card">
                             <div class="card-header" id="headingFour">
@@ -1018,7 +1005,19 @@
                               </h2>
                             </div>
                           </div> -->
-                          <!-- //확진자 News 14 -->
+                          <!-- 확진자 News 15 -->
+                          <div class="card">
+                            <div class="card-header" id="headingFourteen">
+                              <h2 class="mb-0 cases-title">
+                                <a target="_blank" href="https://www.jeju.go.kr/files/convert/202005/8e0d0370-29d1-4f23-815a-b4abdf674313.hwp.htm">
+                                <button class="btn btn-link" type="button">
+                                열다섯번째 확진자
+                                </button>
+                                </a>
+                              </h2>
+                            </div>
+                          </div>
+                          <!-- //확진자 News 15 -->
                         </div>
                       </div>
                     </div>
