fix: change anchor names

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#jejuCasesStatus">
-          <span>제주 재난긴금생활지원금 안내</span>
+          <a class="nav-link" href="#govtStipend">
+          <span>긴급재난지원</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#긴급재난지원금">
-          <span>국가 긴급재난지원금</span>
+          <a class="nav-link" href="#jejuStatus">
+          <span>제주 현황</span>
           </a>
         </li>
         <!-- Divider -->
@@ -803,7 +803,7 @@
               </div>
             </div>
             <!-- 공적 마스크 앱 끝 -->
-            <div class="anchor" id="jejuCasesStatus"></div>
+            <div class="anchor" id="govtStipend"></div>
             <!-- 제주형 재난긴급생활지원금 -->
             <div class="row">
               <div class="col-xl-4 col-lg-4">
@@ -927,7 +927,7 @@
               </div>
             </div>
             <!-- //제주형 재난긴급생활지원금 끝 -->
-            <div class="anchor" id="긴급재난지원금"></div>
+            <div class="anchor" id="jejuStatus"></div>
             <div class="row">
               <div class="col-xl-6 col-lg-12">
                 <!-- 제주 최신 정보(최근 중국인 이동 경로) -->
